argo/apps/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      nodeSelector:
        node-role: light
      containers:
        - name: pihole
          image: pihole/pihole:2024.07.0
          ports:
            - containerPort: 53
              name: dns-udp
              protocol: UDP
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 80
              name: web
          volumeMounts:
            - name: data
              mountPath: /etc/pihole
            - name: dnsmasq
              mountPath: /etc/dnsmasq.d
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pihole-data
        - name: dnsmasq
          persistentVolumeClaim:
            claimName: pihole-dnsmasq
